--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
@@ -191,7 +191,7 @@
 </ul></li>
 </ul>
 
-<p>In the last two sentences, the verb forms are <i>tirir</i> and <i>matir</i> are plural to agree with the plural subjects <i>naucor</i> “dwarves” and <i>orcor</i> “orcs”.</p>
+<p>In the last two sentences, the verb forms <i>tirir</i> and <i>matir</i> are plural to agree with the plural subjects <i>naucor</i> “dwarves” and <i>orcor</i> “orcs”.</p>
 
 <p><a id="c1-2-2-3"></a><b><u>1.2.2.3 Present Tense:</u></b> The present tense in Quenya is used for actions going on in the current time (now). The Quenya present tense is roughly equivalent to the English present continuous tense: “is running”. For basic verbs, the present tense is formed by (a) lengthening the base vowel and (b) adding the suffix <i>-a</i>: <i>nor-</i> “to run” → <i>nóra</i> “is running”. Long vowels in Quenya are marked with an accent <i>´</i> (<i>í, é, á, ó, ú</i>) and are mostly pronounced like short vowels, except held longer; there is more information on pronunciation in <a href="eldamo-intro-quenya-02.html">Chapter 2</a>. Some examples of present tense usage:</p>
 
@@ -204,7 +204,7 @@
 
 <p>Compare the last example to <i>i atani norir</i> “the men run [aorist]”. While the aorist tense is ambiguous as to when men run (it could be at any time, or habitually), the present tense specifies that the men are in the process of running <u>now</u>.</p>
 
-<p>More information on the present tense appears in <a href="eldamo-intro-quenya-03.html">Chapter 3</a>.</p>
+<p>More information on the present tense also appears in <a href="eldamo-intro-quenya-02.html">Chapter 2</a>.</p>
 
 <p><a id="c1-2-2-4"></a><b><u>1.2.2.4 Future, Past, Perfect:</u></b> The remaining tenses are not covered in detail in this chapter, but briefly they are formed as follows:</p>
 
