--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
@@ -24,7 +24,7 @@
 <ul>
 <li><b><a href="#c3-1-1">3.1.1 Modern Consonants</a></b></li>
 <li><b><a href="#c3-1-2">3.1.2 Classical Pronunciations</a></b></li>
-<li><b><a href="#c3-1-3">3.1.3 Vocabulary: Language and Music</a></b></li>
+<li><b><a href="#c3-1-3">3.1.3 Vocabulary: Language</a></b></li>
 <li><b><a href="#x3-1">Exercise 3.1</a></b></li>
 </ul></li>
 <li><b><a href="#c3-2">3.2 Pronouns and Pronominal Suffixes</a></b></li>
@@ -40,25 +40,161 @@
 <ul>
 <li><b><a href="#c3-1-1">3.1.1 Modern Consonants</a></b></li>
 <li><b><a href="#c3-1-2">3.1.2 Classical Pronunciation</a></b></li>
-<li><b><a href="#c3-1-3">3.1.3 Vocabulary: Language and Music</a></b></li>
+<li><b><a href="#c3-1-3">3.1.3 Vocabulary: Language</a></b></li>
 <li><b><a href="#x3-1">Exercise 3.1</a></b></li>
 </ul>
 
-<p>This is the second of two major sections on pronunciation, focused on consonants. We’ve glossed over consonant pronunciation so far, since many Quenya consonants have roughly the same pronunciation as English.</p>
+<p>This is the second of two major sections on pronunciation, focused on consonants. We’ve glossed over consonant pronunciation so far, since many Quenya consonants have roughly the same pronunciation as English. As with	 previous pronunciation guidelines, the goal of this section is to teach the student “good enough” Quenya pronunciation rather than perfection. See <a href="eldamo-intro-quenya-02.html#c2-1-1-5">Section 2.1.1.5</a> for some online resources with sound files if you want to further improve your pronunciation.</p>
 
 <h2><a id="c3-1-1"></a>3.1.1 Modern Consonants</h2>
 
-<p>The Quenya consonants are:</p>
-
 <ul>
-<li><b>Voiceless stops:</b> <i>p, t, c</i> (the last always = [k])</li>
-<li><b><a href="#c3-1-2">3.1.2 Classical Pronunciation</a></b></li>
-<li><b><a href="#c3-1-3">3.1.3 Vocabulary: Language and Music</a></b></li>
-<li><b><a href="#x3-1">Exercise 3.1</a></b></li>
+<li><b><a href="#c3-1-1-1">3.1.1.1 Basic Consonant List</a></b></li>
+<li><b><a href="#c3-1-1-2">3.1.1.2 Voiceless Consonants</a></b></li>
+<li><b><a href="#c3-1-1-3">3.1.1.3 Liquids <i>l, r</i></b></li>
+<li><b><a href="#c3-1-1-4">3.1.1.4 Palatalized and Labialized Consonants</a></b></li>
+<li><b><a href="#c3-1-1-5">3.1.1.5 The letter <i>x</i></a></b></li>
 </ul>
 
+<p><a id="c3-1-1-1"></a><b>3.1.1.1 Basic Consonant List:</b> The basic Quenya consonants are:</p>
+
+<ul>
+<li><i>p, t, c</i>, the last always pronounced [k].</li>
+<li><i>b, d, g</i>, only appearing after other consonants.</li>
+<li><i>f, s, h; v</i>.</li>
+<li><i>m, n, ñ</i>, the last mainly in the combination <i>ng</i> [IPA ŋg].</li>
+<li><i>l, r; y, w</i>.</li>
+<li><i>hl, hr; hw, hy</i>.</li>
+</ul>
+
+<p><a id="c3-1-1-2"></a><b>3.1.1.2 Voiceless Consonants:</b> This last group of consonants in the list above are voiceless sounds that can be tricky for English speakers. Tolkien described voiceless <i>hr</i> and <i>hr</i> in Appendix E of <i>The Lord of the Rings</i>:</p>
+
+<ul>
+<li>LH represents this sound [L] when voiceless (usually derived from initial <i>sl-</i>). In (archaic) Quenya this is written <i>hl</i>, but was in the Third Age usually pronounced as <i>l</i>.</li>
+<li>RH represents a voiceless <i>r</i> (usually derived from older initial <i>sr-</i>). It was written <i>hr</i> in Quenya. Cf. L.</li>
+</ul>
+
+<p>These sounds appear in words like <i>hlas</i> “ear” and <i>hröa</i> “body”. You can approximate this sound by adding a “frictional <i>h</i>” before the <i>l</i> or <i>r</i>, or alternately just pronounce them like regular <i>l</i> or <i>r</i> as was the case in the Third Age. As for <i>hw</i> and <i>hy</i>, Tolkien described them like this:</p>
+
+<ul>
+<li>HW is a voiceless <i>w</i>, as in English “white” (in northern pronunciation). It was not an uncommon initial sound in Quenya, though examples seem not to occur in this book [<i>The Lord of the Rings</i>].</li>
+<li>HY has the same relation to <i>y</i> as HW to <i>w</i>, and represents a sound like that often heard in English “hew, huge”; <i>h</i> in Quenya <i>eht, iht</i> had the same sound.</li>
+</ul>
+
+<p>These sounds appear in words like <i>hwesta</i> “breeze” and <i>hyarmen</i> “south”. The English words “hew, huge” are pretty good approximations of <i>hy</i>. The English word “white” is a less-good approximation of <i>hw</i>. When Tolkien said <i>hw</i> should use the “northern pronunciation” he meant it was a more frictional sound like in Scots English (IPA [xʷ]) rather than truly voiceless “w” (IPA [w̥]). Try pronouncing it more like “hw” than “wh”, emphasizing the “h” sound.</p>
+
+<p>As for <i>h</i> itself, Tolkien said:</p>
+
+<ul>
+<li>H standing alone with no other consonant has the sound of <i>h</i> in “house, behold”. The Quenya combination <i>ht</i> has the sound of <i>cht</i>, as in German <i>echt, acht</i>: e.g. in the name <i>Telumehtar</i> ‘Orion’.</li>
+</ul>
+
+<p>Thus Quenya <i>h</i> normally had the same sound as English “h”, except in the combination <i>ht</i> where it had the same sound as German ich-laut or ach-laut. A German ach-haut is the sound at the end of the name “Bach”, and Quenya <i>ht</i> has this sound after back vowels <i>a, o, u</i>: <i>aht, oht, uht</i> (IPA [x]). A German ich-laut is similar, but more forward in the mouth, the same sound as in Quenya <i>hy</i> as noted above. Quenya <i>ht</i> has this sound after front vowels <i>i, e</i>: <i>iht, eht</i> (IPA [ç]). I personally just use the “Bach” sound in all cases. These sounds show up in words like <i>tehta</i> “letter” and <i>ohta</i> “war”.</p>
+
+<p><a id="c3-1-1-3"></a><b>3.1.1.3 Liquids <i>l, r</i>:</b> Quenya pronounced <i>l, r</i> somewhat differently from English. As Tolkien described them in Appendix E:</p>
+
+<ul>
+<li>L represents more or less the sound of English initial “l”, as in “let”. It was, however, to some degree palatalized between <i>e, i</i> and a consonant, or finally after <i>e, i</i>. (The Eldar would probably have transcribed English “bell, fill” as <i>beol, fiol</i>.)</li>
+<li>R represents a trilled “r” in all positions; the sound was not lost before consonants (as in English “part”).</li>
+</ul>
+
+<p>English has a tendency to “swallow” the letter “r” before other consonants and at the end of words. This is not the case in Quenya, which always pronounces <i>r</i> clearly and distinctly. Furthermore, the Quenya <i>r</i> is the “trilled r” seen in many European languages (IPA [r]) and not the “weak r” (IPA [ɹ]) seen in many English dialects (including my own). The Quenya pronunciation is closer to the Italian, Spanish or Scottish “r”.</p>
+
+<p>Quenya <i>l</i> is also always pronounced clearly and distinctly as it is at the beginning of English words. Quenya uses a “light l” (IPA [l]) and never a “dark l” (IPA [ɫ]) as is common in many English dialects. Again, think Italian or Spanish “l”. The Quenya <i>l</i> often takes on a mild palatal character (palatal meaning an additional “y” sound) after <i>e, i</i>, but I think this is a bit too much for a beginner to try to replicate.</p>
+
+<p><a id="c3-1-1-4"></a><b>3.1.1.4 Palatalized and Labialized Consonants:</b> Quenya has several palatalized and labialized consonants: <i>ny, ty; ñw, qu</i> [kw]. These sounds are analyzed as consonant clusters for purposes of things like stress, but in practices are pronounced as unitary consonants, especially at the beginning of words. As Tolkien described them:</p>
+
+<ul>
+<li>QU has been used for <i>cw</i> [kw], a combination very frequent in Quenya.</li>
+<li>TY represents a sound probably similar to the “t” in English “tune”.</li>
+</ul>
+
+<p>The sound of <i>ty</i> is called “palatized” because it involves the addition of a <i>y</i> sound, and <i>qu</i> [kw] labialized because it involves the addition of a <i>w</i>. The sounds <i>ny</i> and <i>ñw</i> are similar. In IPA, these could be represented as <i>ny</i> = [nʲ], <i>ty</i> = [tʲ]; <i>ñw</i> = [ŋʷ], <i>qu</i> = [kʷ]; in the case of the <i>ny, ty</i> these are probably realized as pure palatals (IPA [ɲ], [c]). For English speakers, I think think its easier to just pronounce <i>n</i> + <i>y</i>, <i>t</i> + <i>y</i>, <i>k</i> + <i>w</i>, etc. In the cases of <i>ñw</i>, Tolkien said this was the “older” pronunciation (see the next section) and the modern pronunciation is <i>nw</i> = <i>n</i> + <i>w</i> (LotR/1123).</p>
+
+<p>These sounds show up in words like <i>nyárë</i> “tale, history”, <i>tyávë</i> “taste”, <i>quenya</i> “Quenya” and <i>nwalmë</i> “pain” (older pronunciation <i>ñwalmë</i> or <i>ngwalmë</i>).</p>
+
+<p><a id="c3-1-1-5"></a><b>The letter <i>x</i>:</b> Also of note is the letter <i>x</i>, which in Quenya is pronounced [ks] just like in English. Thus <i>raxa</i> “wagon” is pronounced [raksa]. Even though it is represented as a single letter, it still counts as a consonant cluster, and therefore the preceding syllable will attract stress, unless of course there is another stressed syllable later in the word. Thus <i>raxa</i> “RAHK.sah” but <i>raxallo</i> “rahk.SAHL.loh”.</p>
+
 <h2><a id="c3-1-2"></a>3.1.2 Classical Pronunciation</h2>
-<h2><a id="c3-1-3"></a>3.1.3 Vocabulary: Language and Music</h2>
+
+<ul>
+<li><b><a href="#c3-1-2-1">3.1.2.1 Archaic Consonants</a></b></li>
+<li><b><a href="#c3-1-2-2">3.1.2.2 The Spelling of Quenya Words</a></b></li>
+<li class="advanced-topic"><b><a href="#c3-1-2-3">3.1.2.3 Archaic For Who?</b></li>
+</ul>
+
+<p><a id="c3-1-2-1"></a><b>3.1.2.1 Archaic Consonants:</b> In the previous chapter in section <a href="eldamo-intro-quenya-02.html#c2-4">2.4 Reading Vocabulary Entries</a>, we mentioned several “archaic pronunciation” markers:</p>
+
+<ul>
+<li>A [<b>þ</b>] represents an older pronunciation (IPA [θ] = “th”) for any <i>s</i> in the word.
+<ul><li>Example: <i>nésa</i> [<i>þ</i>] “sister”, archaic †<i>néþa</i> or †<i>nétha</i>.</li></ul></li>
+<li>A [<b>ñ-</b>] represents an older pronunciation (IPA [ŋ] = “ng”) for an initial <i>n-</i> in the word.
+<ul><li>Example: <i>nandë</i> [<i>ñ-</i>] “harp”, archaic †<i>ñandë</i> or †<i>ngandë</i>.</li></ul></li>
+<li>A [<b>w-</b>] represents an older pronunciation for an initial <i>v-</i> in the word.
+<ul><li>Example: <i>vendë</i> [<i>w-</i>] “maiden”, archaic †<i>wendë</i>.</li></ul></li>
+</ul>
+
+<p>You may not recognize “þ”; it is an Old English letter called “thorn” and represents a “th” sound. Tolkien mentioned these archaic pronunciations in his discussion of tengwar names in <i>The Lord of the Rings</i> Appendix E:</p>
+
+<ul>
+<li>tengwa #9 [<span class="transcribe" data-lang="q" data-value="þ">þ</span>], named †<i>thúlë</i> ([later] <i>súlë</i>) “spirit, breath”.</li>
+<li>tengwa #23 [<span class="transcribe" data-lang="q" data-value="ñ">ñ</span>], named <i>noldo</i> (older †<i>ngoldo</i>) “one of the Noldor”.</li>
+<li>tengwa #29 [<span class="transcribe" data-lang="q" data-value="w">w</span>], named <i>vilya</i> (older †<i>wilya</i>) “air, sky”.</li>
+</ul>
+
+<p>Tolkien also mentioned these old pronunciations in his general discussions of Elvish sounds:</p>
+
+<ul>
+<li>NG represents “ng” in “finger”, except finally where it was sounded as in English “sing”. The latter sound also occurred initially in Quenya, but has been transcribed <i>n</i> (as in <i>Noldo</i>), according to the pronunciation of the Third Age.</li>
+<li>TH represents the voiceless <i>th</i> of English in “thin cloth”. This had become <i>s</i> in spoken Quenya, though still written with a different letter; as in Q. <i>Isil</i>, S. <i>Ithil</i>, “Moon”.</li>
+</ul>
+
+<p>Thus archaic <i>þ</i> is a voiceless “th” sound as in English “thin” (but <u>not</u> voiced as in “this”), and archaic <i>ñ</i> is a back-nasal as heard at the end of English “sing”, but in classical Quenya it could appear at the beginning of words. Note that Tolkien consistently use this <i>ñ</i> sign for a back-nasal, and not for a palatal nasal as seen in Spanish spelling, so Quenya <i>ñ</i> is a “ng” sound and not a Spanish-style “enye”. Note that this Spanish sound <u>does</u> occur in Quenya, but is spelled <i>ny</i> (see above).</p>
+
+<p>For beginners, I recommend sticking with the modern pronunciations “s” and “n”, which avoids these issues. If, however, you want to reproduce the Quenya <i>ñ</i> sound, I recommend practicing by pronouncing an “ng” at the beginning of words, but gradually deemphasize the “g” sound while keeping the nasal sound (<i>ñ</i> or IPA [ŋ]).</p>
+
+<p><a id="c3-1-2-2"></a><b>3.1.2.2 The Spelling of Quenya Words:</b> These older pronunciations date back to Classical Quenya, and are important because they are still reflected in the tengwar spelling of words. The modern word <i>nésa</i> “sister” is pronounced with an “s” sound, but it does not use the tengwa for “s” <span class="tengwar">i</span> (**<span class="transcribe" data-lang="q" data-value="nésa">nésa</span>) but rather with the tengwa for archaic “th” <span class="transcribe" data-lang="q" data-value="þ">þ</span> (<span class="transcribe" data-lang="q" data-value="néþa">néþa</span>). Likewise for <i>nandë</i> “harp”, it is spelled with tengwa <span class="transcribe" data-lang="q" data-value="ñ">ñ</span> (archaic “ñ”) rather than <span class="transcribe" data-lang="q" data-value="n">n</span> (regular “n”): <span class="transcribe" data-lang="q" data-value="ñandë">ñandë</span>. Something similar happens with the initial <i>nw</i>, pronounced “nw” but spelled with <span class="transcribe" data-lang="q" data-value="ñw">ñw</span> (archaic “ñw”): <i>nwalmë</i> “torment” =  <span class="transcribe" data-lang="q" data-value="nwalmë">nwalmë</span>.</p>
+
+<p>Archaic “w” is a special case. In classical pronunciation, the change of <i>w</i> &gt; <i>v</i> was earlier than the change of <i>þ</i> &gt; <i>s</i> and <i>ñ</i> &gt; <i>n</i>, and so the older pronunciation is <u>not</u> reflected in modern tengwar spelling (PE19/75-76). The tengwa letter <span class="transcribe" data-lang="q" data-value="w">w</span> “w” is only used in circumstances where <i>w</i> survived in modern pronunciation, that is following other consonants such as in <i>curwë</i> “craft”: <span class="transcribe" data-lang="q" data-value="curwë">curwë</span>. Despite its early classical pronunciation as †<i>wilya</i>, the modern Quenya word <i>vilya</i> “air” is actually spelled with tengwa <span class="transcribe" data-lang="q" data-value="v">v</span> “v”: <span class="transcribe" data-lang="q" data-value="vilya">vilya</span>. In other words, for <i>w</i> &gt; <i>v</i>, the tengwar spelling was reformed to match the new pronunciation: <span class="transcribe" data-lang="q" data-value="w">w</span> &gt; <span class="transcribe" data-lang="q" data-value="v">v</span>, but a similar spelling reform did not happen for <i>þ</i> &gt; <i>s</i> and <i>ñ</i> &gt; <i>n</i>.</p>
+
+<p>If that is the case, it begs the question of why we mention this archaic “w” pronunciation at all. The reason is that Tolkien often use the “w” spelling when rendering some Quenya words using Latin letters. For example, he frequently spelled <i>vendë</i> “maiden” as <i>wendë</i> and <i>vingë</i> “foam” as <i>wingë</i>. The reasons for this are not entirely clear; perhaps they were remnants of earlier ideas that Tolkien was not willing to entirely abandon. In any case, where this course shows archaic [<i>w-</i>], it represents a quirk of Tolkien’s own spelling methods and not of Quenya itself.</p>
+
+<p>Finally, it is worth noting that some Neo-Quenya writers use the letters <i>w</i>, <i>ñ</i> and <i>þ</i> when writing Quenya, either because they are trying to represent the tengwa spelling or are deliberately emulating a particular style. So it is not unusual to see words like <i>wendë</i>, <i>néþa</i> and <i>ñandë</i> in Neo-Quena writing. For consistency, though, this course uses the spelling and pronunciation recommendations of Appendix E.</p>
+
+<div class="advanced-topic">
+<p><a id="c3-1-2-3"></a><b>3.1.2.3 Archaic For Who?</b> In Appendix E, Tolkien was pretty clear that “s” and “n” were the modern pronunciation of Quenya in the Third Age, but he was a bit vague on who actually <u>used</u> that pronunciation. In his private writings, he changed his mind several times on which groups of Elves used which pronunciation. He sometimes ascribed the <i>þ</i> &gt; <i>s</i> and/or <i>ñ</i> &gt; <i>n</i> sounds change to the Vanyar and sometimes to the Noldor. He also considered various pronunciation reforms after the Noldor encountered the Sindar, who had both the “þ” and “ñ” sounds in their language. In some cases Tolkien even assigned particular pronunciations to Men only. The controversies around which group used which pronunciation are a bit too much for a beginner’s course, however, so we are sticking to the Appendix E rules but will avoid saying who actually used those rules.</p>
+</div>
+
+<h2><a id="c3-1-3"></a>3.1.3 Vocabulary: Language</h2>
+
+<p>Here are some vocabulary words having to do with language:</p>
+
+<ul class="vocab-list">
+<li><b>essë</b> <i>n.</i> “name”</li>
+<li><b>esta-</b> <i>v.</i> “to name”
+<ul><li><i>pa.t.</i> *<b>estanë</b> “named”</li></ul></li>
+<li><b>henta-</b> <i>v.</i> “to read, scan”
+<ul><li><i>pa.t.</i> <b>hentanë</b> “read, scanned”</li></ul></li>
+<li>^<b>hyalin</b> <i>n.</i> “paper”</li>
+<li><b>lambë</b> <i>n.</i> “language”</li>
+<li><b>lúmequenta</b> <i>n.</i> “history”</li>
+<li><b>nyárë</b> <i>n.</i> “tale”</li>
+<li><b>nyar-</b> <i>v.</i> “to tell”
+<ul><li><i>pa.t.</i> *<b>nyarnë</b> “told”</li></ul></li>
+<li><b>óma</b> <i>n.</i> “voice”</li>
+<li><b>parma</b> <i>n.</i> “book”</li>
+<li><b>quenta</b> <i>n.</i> “story”</li>
+<li><b>quet-</b> <i>v.</i> “to say, speak”
+<ul><li><i>pa.t.</i> <b>quentë</b> “said, spoke”</li></ul></li>
+<li><b>quetta</b> <i>n.</i> “word”</li>
+<li><b>tec-</b> <i>v.</i> “to write”
+<ul><li><i>pa.t.</i> ^<b>tencë</b> “wrote”</li></ul></li>
+<li><b>tecil</b> <i>n.</i> “pen”</li>
+<li><b>tehta</b> <i>n.</i> “mark (written), diacritic”</li>
+<li><b>tengwa</b> <i>n.</i> “letter (individual) ”</li>
+<li><b>tengwë</b> <i>n.</i> “writing”</li>
+</ul>
+
 <h2><a id="x3-1"></a>Exercise 3.1</h2>
 
 </body>
