--- a/src/main/webapp/general/getting-started.html
+++ b/src/main/webapp/general/getting-started.html
@@ -22,12 +22,12 @@
    </li>
    <li><b>Sindarin</b>
    <ul>
-       <li>Fiona Jalling’s <i><a href="https://academy.realelvish.net/store/">A Fan’s Guide to Neo-Sindarin</a></i></li>
+       <li>Fiona Jallings’ <i><a href="https://academy.realelvish.net/store/">A Fan’s Guide to Neo-Sindarin</a></i></li>
        <li>Thorsten Renk’s <i><a href="http://www.science-and-fiction.org/bookstore.html#pedin_edhellen">Pedin Edhellen</a></i></li>
    </ul>
    </li>
 </ul>
-<p>Tamas Ferencz’s and Fiona Jalling’s are the most current in terms of their use of the latest publications in Tolkien linguistics. Helge Fauskanger’s and Thorsten Renk’s courses are considerably older and less current, but have the advantage of being published in languages other than English. Of the two major Elvish languages, the “High Elvish” language of Quenya was more completely described by Tolkien, and I feel that it is more accessible to beginners. However, many students of Tolkien’s languages are more interested in learning Sindarin despite its added complexity, since it was the Elvish language more commonly spoken in Middle-earth and more prevalent (for example) in Peter Jackson’s <i>Lord of the Rings</i> and <i>Hobbit</i> movies.</p>
+<p>Tamas Ferencz’s and Fiona Jallings’ are the most current in terms of their use of the latest publications in Tolkien linguistics. Helge Fauskanger’s and Thorsten Renk’s courses are considerably older and less current, but have the advantage of being published in languages other than English. Of the two major Elvish languages, the “High Elvish” language of Quenya was more completely described by Tolkien, and I feel that it is more accessible to beginners. However, many students of Tolkien’s languages are more interested in learning Sindarin despite its added complexity, since it was the Elvish language more commonly spoken in Middle-earth and more prevalent (for example) in Peter Jackson’s <i>Lord of the Rings</i> and <i>Hobbit</i> movies.</p>
 <p>Once you have an understanding of the grammar of the Elvish languages, you can use the vocabulary in this lexicon as a source of words for new Elvish compositions:</p>
 <ul>
    <li><b><a href="../content/word-indexes/words-nq.html">(Neo) Quenya Words</a></b>
