--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-03.html
@@ -197,5 +197,23 @@
 
 <h2><a id="x3-1"></a>Exercise 3.1</h2>
 
+<p></p>
+
+<ol class="exercise-list">
+<li><b>curwë</b> <i>n.</i> “wagon”</li>
+<li><b>hlas</b> <i>n.</i> “ear”</li>
+<li><b>hröa</b> <i>n.</i> “body”</li>
+<li><b>hwesta</b> <i>n.</i> “breeze”</li>
+<li><b>hyarmen</b> <i>n.</i> “south”</li>
+<li><b>nandë</b> [<b>ñ-</b>] <i>n.</i> “harp”</li>
+<li><b>nwalmë</b> [<b>ñ-</b>] <i>n.</i> “pain”</li>
+<li><b>nésa</b> [<b>þ</b>] <i>n.</i> “sister”</li>
+<li><b>ohta</b> <i>n.</i> “war”</li>
+<li><b>raxa</b> <i>n.</i> “wagon”</li>
+<li><b>tehta</b> <i>n.</i> “mark (written), diacritic”</li>
+<li><b>tyávë</b> <i>n.</i> “taste”</li>
+<li><b>vendë</b> [<b>w-</b>] <i>n.</i> “maiden”</li>
+</ol>
+
 </body>
 </html>
