--- a/src/main/webapp/general/version-history.html
+++ b/src/main/webapp/general/version-history.html
@@ -10,7 +10,12 @@
 <p>[<a href="../index.html">Home</a>]</p>
 <hr>
 <h1>Version History</h1>
-<p>v0.8.4</p>
+<p>v0.8.4.1</p>
+<ul>
+<li>Minor release to fix a build issue.</li>
+<li>Introduced spelling convention <i>öa</i> to make pronunciation clearer.</li>
+</ul>
+<p>v0.8.4 (September 14, 2022)</p>
 <ul>
 <li>Dictionary entries for semantic category 4 = Body Parts and Functions.</li>
 </ul>
