--- a/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
+++ b/src/main/webapp/intro-quenya/eldamo-intro-quenya-01.html
@@ -763,7 +763,7 @@
 
 <p><a id="c1-2-5-4"></a><b><u>1.2.5.4 Prepositions and  Noun Cases:</u></b> The directional noun cases are not very specific, and can have various meanings depending on context: <i>menelessë</i> likely would be translated “in the sky” but <i>i ambossë</i> as “on the hill”. Both really mean “at the location of [the heavens/hill]”, so the exact meaning depends on the noun. In some cases the meaning can be ambiguous: <i>cöassë</i> could mean “at a house”, “in a house”, or even “just outside a house”. The precise meaning can be deduced from context, or a more exact preposition can be used to clarify it, something like: <i>mi cöa</i> “in a house” or <i>et cöa</i> “out(side) of a house”. The English preposition “at” best represents the generic meaning of locative <i>-ssë</i>, but only loosely: “at a hill” sounds weird in English.</p>
 
-<p>Noun cases can also be used in combination with prepositions to further alter the meaning: <i>et i cöa</i> would mean “out of the house”, but <i>et i cöallo</i> (<i>cöa-llo</i>) would be “out <u>from</u> the house”, specifying motion leaving the house. Finally, some prepositions <u>require</u> a specific noun case. The preposition <i>ú</i> “without” mentioned at the beginning of this section requires the noun to be in the genitive case, with suffixal <i>-o</i>. So “a tower without a roof” would be <i>mindon ú telumëo</i> (<i>telumë-o</i>).</p>
+<p>Noun cases can also be used in combination with prepositions to further alter the meaning: <i>et i cöa</i> would mean “out of the house”, but <i>et i cöallo</i> (<i>cöa-llo</i>) would be “out <u>from</u> the house”, specifying motion leaving the house. Finally, some prepositions <u>require</u> a specific noun case. The preposition <i>ú</i> “without” mentioned at the beginning of this section requires the noun to be in the genitive case, with suffixal <i>-o</i>. So “a tower without a roof” would be <i>mindon ú telumëo</i> (<i>telumë-o</i>). Compare this with the English preposition “out”, which requires a second preposition of some kind: “out of” or “out from” (as opposed to Quenya <i>et</i> which may be used by itself to mean “out of” but with <i>-llo</i> to mean “out from”).</p>
 
 <p><a id="c1-2-5-5"></a><b><u>1.2.5.5 Possessive Pronouns and Noun Cases:</u></b> A possessive pronoun is suffixed to the noun first, followed by any case suffix, for example <i>ambolyanna</i> (<i>ambo-lya-nna</i>) “to your hill”. Since possessive pronouns all end in <i>a</i>, this means the genitive suffix always turns the final <i>a</i> to <i>o</i>: <i>ambolyo</i> (<i>ambo</i> + <i>-lya</i> + <i>-o</i>) “of your hill”. Plural forms are likewise handled as if the base noun ended in the possessive suffix with the vowel <i>a</i>: <i>ambolyannar</i> (<i>ambo-lya-nna-r</i>) “to your hills”, <i>ambolyaron</i> (<i>ambo-lya-r-on</i>) “of your hills”. Some more examples:</p>
 
@@ -887,7 +887,7 @@
 <li>Note ¹: The indeclinable relative pronoun <i>i</i> “who, which, that” has the same form but is distinct in function from the definite article <i>i</i> “the”. Likewise for the plural <i>i-</i> of the declinable personal relative pronoun. See the discussion below.</li>
 </ul>
 
-<p>This section is the most complex part of this first chapter, and in it we can only scratch the surface for how complex sentences are assembled. However, you need some understanding of complex sentence structure to have anything resembling normal discourse. These topics will be covered in greater detail in <a href="eldamo-intro-quenya-10.html">Chapter 10</a> and <a href="eldamo-intro-quenya-11.html">Chapter 11</a>.</p>
+<p>This section is the most difficult part of this first chapter, and in it we can only scratch the surface for how complex sentences are assembled. However, you need some understanding of complex sentence structure to have anything resembling normal discourse. These topics will be covered in greater detail in <a href="eldamo-intro-quenya-10.html">Chapter 10</a> and <a href="eldamo-intro-quenya-11.html">Chapter 11</a>.</p>
 
 <p><a id="c1-2-6-1"></a><b><u>1.2.6.1 Conjunctions:</u></b> As noted above, conjunctions join together elements of a sentence. Some examples of conjunction use:</p>
 
@@ -917,15 +917,15 @@
 <ul>
 <li><i>tíran atani i <u>nórar</u></i> “I am watching men who <u>are running</u>”, where <i>nóra-r</i> = “(are running)-(pl.)”.</li>
 <li><i>tuvis mindoni i <u>samir</u> telumi</i> “he finds towers that <u>have</u> roofs”, where <i>sami-r</i> = “have-(pl.)”.</li>
-<li><i>círan i aiwi i aran <u>matë</u></i> “I am cutting the birds that a king eats”, where relative pronoun is the object.</li>
-<li><i>círan i aiwë i arani <u>matir</u></i> “I am cutting the bird that kings eat”, where relative pronoun is the object.</li>
+<li><i>círan i aiwi i aran <u>matë</u></i> “I am cutting the birds that a king eats”, where the relative pronoun is the object.</li>
+<li><i>círan i aiwë i arani <u>matir</u></i> “I am cutting the bird that kings eat”, where the relative pronoun is the object.</li>
 </ul>
 
 <p>This kind of agreement is something you probably do subconsciously when using English, but can be tricky when working in another language. Remember that the verb must agree with plurality of the subject, whether that subject is directly before the verb, or is referenced indirectly via the relative pronoun.</p>
 
 <p>The pronoun <i>i</i> itself does not change for singular vs. plural. The relative pronoun <i>i</i> is called indeclinable because it cannot be modified. It can only be used as a standalone pronoun, and cannot (for example) be declined into noun cases. When such a thing is necessary, the declinable relative pronouns must be used instead (see next).</p>
 
-<p><a id="c1-2-6-3"></a><b><u>1.2.6.3 Subordinate Clauses, Declinable <i>ya, ye</i>:</u></b> When the relative pronoun must be put into a noun case, one of the declinable relative pronouns must be used: <i>ya</i> for things (“which”) and <i>ye</i> for persons (“who”), which in Quenya includes any living thing. Some examples:</p>
+<p><a id="c1-2-6-3"></a><b><u>1.2.6.3 Subordinate Clauses, Declinable <i>ya, ye</i>:</u></b> When the relative pronoun is put into a noun case, one of the declinable relative pronouns must be used: <i>ya</i> for things (“which”) and <i>ye</i> for persons (“who”), which in Quenya includes any living thing. Some examples:</p>
 
 <ul>
 <li><i>aiwi lorir i tauressë <u>yanna</u> eldar menir</i> “birds sleep in the forest <u>to which</u> elves go”.</li>
